; ModuleID = '/home/carl/AnghaBench/vlc/test/src/input/extr_thumbnail.c_main.c'
source_filename = "/home/carl/AnghaBench/vlc/test/src/input/extr_thumbnail.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@main.argv = internal global [2 x i8*] [i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i32 0, i32 0), i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i32 0, i32 0)], align 16
@.str = private unnamed_addr constant [3 x i8] c"-v\00", align 1
@.str.1 = private unnamed_addr constant [16 x i8] c"--ignore-config\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32*, align 8
  %2 = call i32 (...) @test_init()
  %3 = call i32 @ARRAY_SIZE(i8** getelementptr inbounds ([2 x i8*], [2 x i8*]* @main.argv, i64 0, i64 0))
  %4 = call i32* @libvlc_new(i32 %3, i8** getelementptr inbounds ([2 x i8*], [2 x i8*]* @main.argv, i64 0, i64 0))
  store i32* %4, i32** %1, align 8
  %5 = load i32*, i32** %1, align 8
  %6 = call i32 @assert(i32* %5)
  %7 = load i32*, i32** %1, align 8
  %8 = call i32 @test_thumbnails(i32* %7)
  %9 = load i32*, i32** %1, align 8
  %10 = call i32 @test_cancel_thumbnail(i32* %9)
  %11 = load i32*, i32** %1, align 8
  %12 = call i32 @libvlc_release(i32* %11)
  ret i32 0
}

declare dso_local i32 @test_init(...) #1

declare dso_local i32* @libvlc_new(i32, i8**) #1

declare dso_local i32 @ARRAY_SIZE(i8**) #1

declare dso_local i32 @assert(i32*) #1

declare dso_local i32 @test_thumbnails(i32*) #1

declare dso_local i32 @test_cancel_thumbnail(i32*) #1

declare dso_local i32 @libvlc_release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
